--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.17.2",
     "react-explode": "^2.0.5",
+    "react-pure-lifecycle": "^3.0.0",
     "react-router-dom": "^6.2.1",
     "react-typing-game-hook": "^1.3.4"
   }
